card info and font styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Home</title>
   </head>
@@ -32,14 +36,19 @@
         <div class="card">
           <img
             src="https://images.unsplash.com/photo-1560831457-87b5ec4c5e57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1286&q=80"
-            alt=""
+            alt="Raspberry pie"
           />
-          <div class="card__type"></div>
+          <div class="card__type">Dessert</div>
           <div class="card__title">Raspberry pie</div>
-          <div class="card__description"></div>
+          <div class="card__description">
+            This raspberry pie recipe is a wonderful way to use those
+            raspberries growing in the yard.
+          </div>
           <div class="card__preparation">
-            <div class="card__preparation__icon"></div>
-            <div class="card__preparation__time"></div>
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">1 hr</div>
           </div>
         </div>
       </div>
@@ -49,12 +58,16 @@
             src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
             alt=""
           />
-          <div class="card__type"></div>
+          <div class="card__type">Salad</div>
           <div class="card__title">Vegan salad</div>
-          <div class="card__description"></div>
+          <div class="card__description">
+            This vegan Spanish green bean salad is great as a side with paella.
+          </div>
           <div class="card__preparation">
-            <div class="card__preparation__icon"></div>
-            <div class="card__preparation__time"></div>
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">3 hr 20 mins</div>
           </div>
         </div>
         <div class="card">
@@ -62,12 +75,17 @@
             src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80"
             alt=""
           />
-          <div class="card__type"></div>
+          <div class="card__type">Meat</div>
           <div class="card__title">Grilled Chicken</div>
-          <div class="card__description"></div>
+          <div class="card__description">
+            Grilled chicken with a combination of beer, lime juice and spices.
+            It's just amazing!
+          </div>
           <div class="card__preparation">
-            <div class="card__preparation__icon"></div>
-            <div class="card__preparation__time"></div>
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">54 mins</div>
           </div>
         </div>
         <div class="card">
@@ -75,12 +93,18 @@
             src="https://images.unsplash.com/photo-1612874742237-6526221588e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80"
             alt=""
           />
-          <div class="card__type"></div>
+          <div class="card__type">Pasta</div>
           <div class="card__title">Pasta Carbonara</div>
-          <div class="card__description"></div>
+          <div class="card__description">
+            This carbonara is a delectable, mouth-watering pile of yummy
+            goodness! I recommend a nice salad with it — that's all you will
+            need for a complete meal.
+          </div>
           <div class="card__preparation">
-            <div class="card__preparation__icon"></div>
-            <div class="card__preparation__time"></div>
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">35 mins</div>
           </div>
         </div>
         <div class="card">
@@ -88,12 +112,17 @@
             src="https://images.unsplash.com/photo-1541095441899-5d96a6da10b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80"
             alt=""
           />
-          <div class="card__type"></div>
+          <div class="card__type">Soup</div>
           <div class="card__title">Spicy Pumpkin soup</div>
-          <div class="card__description"></div>
+          <div class="card__description">
+            This deliciously creamy pumpkin soup is served at our family's
+            Thanksgiving dinner every year.
+          </div>
           <div class="card__preparation">
-            <div class="card__preparation__icon"></div>
-            <div class="card__preparation__time"></div>
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">1 hr 20 mins</div>
           </div>
         </div>
       </div>
