--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Home</title>
   </head>
   <body>
@@ -26,14 +26,14 @@
       <nav>
         <ul>
           <li><a href="#">Recipes</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="./pages/about.html">About</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Top RECIPES</h1>
       <div class="left">
-        <div class="card">
+        <a href="../pages/pie.html" class="card big">
           <div class="card__type">Dessert</div>
           <div class="card__title">Raspberry pie</div>
           <div class="card__description">
@@ -46,10 +46,28 @@
             </div>
             <div class="card__preparation__time">1 hr</div>
           </div>
-        </div>
+        </a>
+        <a href="../pages/pie.html" class="card small">
+          <img
+            src="https://images.unsplash.com/photo-1560831457-87b5ec4c5e57?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1286&q=80"
+            alt=""
+          />
+          <div class="card__type">Dessert</div>
+          <div class="card__title">Raspberry pie</div>
+          <div class="card__description">
+            This raspberry pie recipe is a wonderful way to use those
+            raspberries growing in the yard.
+          </div>
+          <div class="card__preparation">
+            <div class="card__preparation__icon">
+              <span class="material-symbols-outlined">timer</span>
+            </div>
+            <div class="card__preparation__time">1 hr</div>
+          </div>
+        </a>
       </div>
       <div class="right">
-        <div class="card">
+        <a href="../pages/salad.html" class="card">
           <img
             src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
             alt=""
@@ -65,8 +83,8 @@
             </div>
             <div class="card__preparation__time">3 hr 20 mins</div>
           </div>
-        </div>
-        <div class="card">
+        </a>
+        <a href="../pages/chicken.html" class="card">
           <img
             src="https://images.unsplash.com/photo-1592011432621-f7f576f44484?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
             alt=""
@@ -83,8 +101,8 @@
             </div>
             <div class="card__preparation__time">54 mins</div>
           </div>
-        </div>
-        <div class="card">
+        </a>
+        <a href="../pages/pasta.html" class="card">
           <img
             src="https://images.unsplash.com/photo-1612874742237-6526221588e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80"
             alt=""
@@ -102,8 +120,8 @@
             </div>
             <div class="card__preparation__time">35 mins</div>
           </div>
-        </div>
-        <div class="card">
+        </a>
+        <a href="../pages/soup.html" class="card">
           <img
             src="https://images.unsplash.com/photo-1530734575165-ce39d996fbaa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80"
             alt=""
@@ -120,7 +138,7 @@
             </div>
             <div class="card__preparation__time">1 hr 20 mins</div>
           </div>
-        </div>
+        </a>
       </div>
     </main>
   </body>
